force-app/main/default/objects/Activation_line__c/fields/Fokus_SOC__c.field-meta.xml
<CustomField>
    <fullName>Fokus_SOC__c</fullName>
    <label>Fokus SOC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>