force-app/main/default/objects/Activation_line__c/fields/FS_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Number__c</fullName>
    <label>FS Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>