force-app/main/default/objects/Activation_line__c/fields/Full_name__c.field-meta.xml
<CustomField>
    <fullName>Full_name__c</fullName>
    <formula>First_name__c + &apos; &apos; + Last_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full name</label>
    <type>Text</type>
</CustomField>