force-app/main/default/objects/Activation_line__c/fields/Funktionsnr__c.field-meta.xml
<CustomField>
    <fullName>Funktionsnr__c</fullName>
    <inlineHelpText>Indicate the type of UC function number</inlineHelpText>
    <label>Numbertype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Funktionsnummer</valueSetName>
    </valueSet>
</CustomField>