force-app/main/default/objects/Activation_line__c/fields/Hidden_from_TOP__c.field-meta.xml
<CustomField>
    <fullName>Hidden_from_TOP__c</fullName>
    <formula>IF( ISPICKVAL(Activation__r.Type__c, &apos;Renew Existing&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden from TOP</label>
    <type>Checkbox</type>
</CustomField>