force-app/main/default/objects/Activation_line__c/fields/Home_Office__c.field-meta.xml
<CustomField>
    <fullName>Home_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Office</label>
    <type>Checkbox</type>
</CustomField>