force-app/main/default/objects/Activation_line__c/fields/Home_Office_Activation_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Activation_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Order API has received and accepted the activation</description>
    <label>Home Office Activation Accepted</label>
    <type>Checkbox</type>
</CustomField>