force-app/main/default/objects/Activation_line__c/fields/Home_Office_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Order_Id__c</fullName>
    <description>This field is used for persist the order id returned from the Order APi, once an order is sent and the processing status is either RECEIVED or SUBMITTED</description>
    <label>Home Office Order Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>