force-app/main/default/objects/Activation_line__c/fields/Home_Office_OTC_Product__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_OTC_Product__c</fullName>
    <description>Home Office OTC Products</description>
    <label>Home Office OTC Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Home_Office_OTC_products</valueSetName>
    </valueSet>
</CustomField>