force-app/main/default/objects/Activation_line__c/fields/Home_Office_Request_Activation__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Request_Activation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when Activation has been requested for an activation line.</description>
    <label>Home Office Request Activation</label>
    <type>Checkbox</type>
</CustomField>