force-app/main/default/objects/Activation_line__c/fields/Home_Office_Requested_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Requested_Activation_Date__c</fullName>
    <description>Date for when activation was requested</description>
    <label>Home Office Requested Activation Date</label>
    <type>Date</type>
</CustomField>