force-app/main/default/objects/Activation_line__c/fields/Home_Office_VAS_Product__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_VAS_Product__c</fullName>
    <description>Hoem Office VAS products</description>
    <label>Home Office VAS Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Home_Office_VAS_products</valueSetName>
    </valueSet>
</CustomField>