force-app/main/default/objects/Activation_line__c/fields/HSRP_LAN_IP__c.field-meta.xml
<CustomField>
    <fullName>HSRP_LAN_IP__c</fullName>
    <description>To accommodate order form to tech</description>
    <label>HSRP LAN IP</label>
    <type>TextArea</type>
</CustomField>