force-app/main/default/objects/Activation_line__c/fields/Installation_address__c.field-meta.xml
<CustomField>
    <fullName>Installation_address__c</fullName>
    <inlineHelpText>Customer address where site will be documented in SmallWorld</inlineHelpText>
    <label>Installation address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>