force-app/main/default/objects/Activation_line__c/fields/Installation_Address_existing__c.field-meta.xml
<CustomField>
    <fullName>Installation_Address_existing__c</fullName>
    <description>To accommodate order form to tech</description>
    <label>Installation Address (existing)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>