force-app/main/default/objects/Activation_line__c/fields/Internet_on_Site__c.field-meta.xml
<CustomField>
    <fullName>Internet_on_Site__c</fullName>
    <description>Datanet configuration - added by sales specialist</description>
    <label>Internet on Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Internet_on_Site</valueSetName>
    </valueSet>
</CustomField>