force-app/main/default/objects/Activation_line__c/fields/Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email__c</fullName>
    <inlineHelpText>Email to receive invoice</inlineHelpText>
    <label>Invoice Email</label>
    <type>Email</type>
</CustomField>