force-app/main/default/objects/Activation_line__c/fields/Invoice_Email_F__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_F__c</fullName>
    <formula>Billing_Account__r.Invoice_Email__c</formula>
    <label>Invoice Email</label>
    <type>Text</type>
</CustomField>