force-app/main/default/objects/Activation_line__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <inlineHelpText>If PDF is chosen an invoice email needs to be provided. If EAN is chosen an EAN number should be entered</inlineHelpText>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoice_Type</valueSetName>
    </valueSet>
</CustomField>