force-app/main/default/objects/Activation_line__c/fields/Invoice_Type_F__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type_F__c</fullName>
    <formula>TEXT(Billing_Account__r.Invoice_Type__c)</formula>
    <label>Invoice Type</label>
    <type>Text</type>
</CustomField>