force-app/main/default/objects/Activation_line__c/fields/IP_Helper__c.field-meta.xml
<CustomField>
    <fullName>IP_Helper__c</fullName>
    <description>To accommodate order form to tech</description>
    <label>IP Helper</label>
    <type>TextArea</type>
</CustomField>