force-app/main/default/objects/Activation_line__c/fields/Is_Digging_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_Digging_Needed__c</fullName>
    <description>Return true if any of the selected fields inside the OR has the value true</description>
    <formula>OR( VAS_CHXT02__c ,  VAS_CHXT04__c, VAS_CHXT06__c, VAS_CHXT11__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Digging Needed</label>
    <type>Checkbox</type>
</CustomField>