force-app/main/default/objects/Activation_line__c/fields/isSIMMandatory__c.field-meta.xml
<CustomField>
    <fullName>isSIMMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A boolean field to determine whether the SIM_number__c is mandatory to fill in in the customer portal solution.
In the customer portal solution, when the vendor of the selected POA is CBB or Telmore, this field will be set to true by flow on Activation Line.</description>
    <label>isSIMMandatory</label>
    <type>Checkbox</type>
</CustomField>