force-app/main/default/objects/Activation_line__c/fields/Junction_Count__c.field-meta.xml
<CustomField>
    <fullName>Junction_Count__c</fullName>
    <label>Junction Count</label>
    <summaryForeignKey>Activation_Assignment_Junction__c.Activation_line__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>