force-app/main/default/objects/Activation_line__c/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <inlineHelpText>Optional field to enter any type of keyword for the UC solution on user level</inlineHelpText>
    <label>Keywords</label>
    <type>TextArea</type>
</CustomField>