force-app/main/default/objects/Activation_line__c/fields/Kollegakald__c.field-meta.xml
<CustomField>
    <fullName>Kollegakald__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kollegakald</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a &quot;Kollegakald&quot; product</errorMessage>
        <filterItems>
            <field>Product2.Name</field>
            <operation>contains</operation>
            <value>Kollegakald</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Activations lines (Kollegakald)</relationshipLabel>
    <relationshipName>Activations_lines4</relationshipName>
    <type>Lookup</type>
</CustomField>