force-app/main/default/objects/Activation_line__c/fields/LAN_network_address_mask__c.field-meta.xml
<CustomField>
    <fullName>LAN_network_address_mask__c</fullName>
    <description>To accommodate order form to tech</description>
    <label>LAN network address/mask</label>
    <type>TextArea</type>
</CustomField>