force-app/main/default/objects/Activation_line__c/fields/Latest_SLA__c.field-meta.xml
<CustomField>
    <fullName>Latest_SLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest SLA</label>
    <referenceTo>SLA_Tracking__c</referenceTo>
    <relationshipLabel>Activations lines</relationshipLabel>
    <relationshipName>Activations_lines</relationshipName>
    <type>Lookup</type>
</CustomField>