force-app/main/default/objects/Activation_line__c/fields/Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Line_ID__c</fullName>
    <description>Added for Business Internet (Site ID)
Usable for Home Office (Employee ID)</description>
    <label>Line ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>