force-app/main/default/objects/Activation_line__c/fields/Local_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Company_Name__c</fullName>
    <inlineHelpText>Only entered by sales specialist if different from Company name of Account</inlineHelpText>
    <label>Local Company Name</label>
    <type>TextArea</type>
</CustomField>