force-app/main/default/objects/Activation_line__c/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <inlineHelpText>Enter the locality if this should be part of the UC solution on user level</inlineHelpText>
    <label>Locale</label>
    <type>TextArea</type>
</CustomField>