force-app/main/default/objects/Activation_line__c/fields/Location_Line__c.field-meta.xml
<CustomField>
    <fullName>Location_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Line</label>
    <referenceTo>Location_Line__c</referenceTo>
    <relationshipLabel>Activations lines</relationshipLabel>
    <relationshipName>Activations_lines</relationshipName>
    <type>Lookup</type>
</CustomField>