force-app/main/default/objects/Activation_line__c/fields/M2M__c.field-meta.xml
<CustomField>
    <fullName>M2M__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M2M</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select an M2M product</errorMessage>
        <filterItems>
            <field>Product2.Name</field>
            <operation>startsWith</operation>
            <value>M2M Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Activations lines (M2M)</relationshipLabel>
    <relationshipName>Activations_lines2</relationshipName>
    <type>Lookup</type>
</CustomField>