force-app/main/default/objects/Activation_line__c/fields/Main_Number__c.field-meta.xml
<CustomField>
    <fullName>Main_Number__c</fullName>
    <label>Main Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>