force-app/main/default/objects/Activation_line__c/fields/Manual_Product__c.field-meta.xml
<CustomField>
    <fullName>Manual_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Add relevant product for the manual activation</inlineHelpText>
    <label>Manual Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Activations lines (Manual Product)</relationshipLabel>
    <relationshipName>Activations_lines7</relationshipName>
    <type>Lookup</type>
</CustomField>