force-app/main/default/objects/Activation_line__c/fields/Manual_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Manual_Product_ID__c</fullName>
    <formula>Manual_Product__c</formula>
    <label>Manual Product ID</label>
    <type>Text</type>
</CustomField>