force-app/main/default/objects/Activation_line__c/fields/Max_Monthly_Data_Used__c.field-meta.xml
<CustomField>
    <fullName>Max_Monthly_Data_Used__c</fullName>
    <description>MAX_MONTHLY_DATA_CONSUMPTION_MB from the Fokus subscriptions</description>
    <inlineHelpText>Displays the max data consumption per month</inlineHelpText>
    <label>Max Monthly Data Used (MB)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>