force-app/main/default/objects/Activation_line__c/fields/MBB__c.field-meta.xml
<CustomField>
    <fullName>MBB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MBB</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Name</field>
            <operation>contains</operation>
            <value>4Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Activations lines (MBB)</relationshipLabel>
    <relationshipName>Activations_lines1</relationshipName>
    <type>Lookup</type>
</CustomField>