force-app/main/default/objects/Activation_line__c/fields/Mobile_no__c.field-meta.xml
<CustomField>
    <fullName>Mobile_no__c</fullName>
    <description>Mobile number that can have max 8 digits</description>
    <inlineHelpText>Mobile number that can have max 8 digits</inlineHelpText>
    <label>Mobile no.</label>
    <length>8</length>
    <type>Text</type>
</CustomField>