force-app/main/default/objects/Activation_line__c/fields/Monthly_Add_on_fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Add_on_fee__c</fullName>
    <inlineHelpText>Transferred from Quote (entered by sales rep/sales specialist)</inlineHelpText>
    <label>Monthly Add on fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>