force-app/main/default/objects/Activation_line__c/fields/MultipleVPN__c.field-meta.xml
<CustomField>
    <fullName>MultipleVPN__c</fullName>
    <inlineHelpText>Used for Datanet (Fiber or DSL)</inlineHelpText>
    <label>MultipleVPN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MultipleVPN</valueSetName>
    </valueSet>
</CustomField>