force-app/main/default/objects/Activation_line__c/fields/My_Activation__c.field-meta.xml
<CustomField>
    <fullName>My_Activation__c</fullName>
    <formula>Activation__r.Owner_is_logged_in_user__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Activation</label>
    <type>Checkbox</type>
</CustomField>