force-app/main/default/objects/Activation_line__c/fields/Not_to_Activation__c.field-meta.xml
<CustomField>
    <fullName>Not_to_Activation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use the checkbox to exclude the activation line to be inside the Activation order created by the &quot;Send To Activation&quot; button</description>
    <inlineHelpText>Use the checkbox to exclude the activation line to be inside the Activation order created by the &quot;Send To Activation&quot; button</inlineHelpText>
    <label>Don&apos;t send to Activation</label>
    <type>Checkbox</type>
</CustomField>