force-app/main/default/objects/Activation_line__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>Street Number</description>
    <label>Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>