force-app/main/default/objects/Activation_line__c/fields/Number_of_IP_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_IP_Addresses__c</fullName>
    <label>Number of IP Addresses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>More</fullName>
            </value>
            <value>
                <fullName>My own IP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>