force-app/main/default/objects/Activation_line__c/fields/Number_Porting_End_of_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Number_Porting_End_of_Commitment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if number porting should be by end of the customers existing commitment</inlineHelpText>
    <label>Number Porting End of Commitment</label>
    <type>Checkbox</type>
</CustomField>