force-app/main/default/objects/Activation_line__c/fields/Number_Porting_Specific_Date__c.field-meta.xml
<CustomField>
    <fullName>Number_Porting_Specific_Date__c</fullName>
    <inlineHelpText>Enter the date for the number porting in the format YYYY-MM-DD - the date can either be for a &apos;straksportering&apos; or a preferred date - both will have a cost related to the customer from the existing Vendor</inlineHelpText>
    <label>Activation/Porting/Termination Date</label>
    <type>Date</type>
</CustomField>