force-app/main/default/objects/Activation_line__c/fields/Number_Series__c.field-meta.xml
<CustomField>
    <fullName>Number_Series__c</fullName>
    <label>Number Series</label>
    <length>30</length>
    <type>Text</type>
</CustomField>