force-app/main/default/objects/Activation_line__c/fields/Number_Series_Main_Number__c.field-meta.xml
<CustomField>
    <fullName>Number_Series_Main_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TSFDK-230 links to Number Series Main Number and related Number Series Ranges</description>
    <label>Number Series Main Number</label>
    <referenceTo>Main_number__c</referenceTo>
    <relationshipLabel>Activations lines</relationshipLabel>
    <relationshipName>Activations_lines</relationshipName>
    <type>Lookup</type>
</CustomField>