force-app/main/default/objects/Activation_line__c/fields/Offer_ID__c.field-meta.xml
<CustomField>
    <fullName>Offer_ID__c</fullName>
    <inlineHelpText>Enter the ID of the offer provided via &apos;kabelforespørgsel&apos;</inlineHelpText>
    <label>Offer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>