force-app/main/default/objects/Activation_line__c/fields/Old_ICC__c.field-meta.xml
<CustomField>
    <fullName>Old_ICC__c</fullName>
    <label>Old ICC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>