force-app/main/default/objects/Activation_line__c/fields/Onboarding_Activation_Line__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Activation_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding Activation Line</label>
    <type>Checkbox</type>
</CustomField>