force-app/main/default/objects/Activation_line__c/fields/Onsite_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Email__c</fullName>
    <label>Onsite Contact Email</label>
    <type>Email</type>
</CustomField>