force-app/main/default/objects/Activation_line__c/fields/Onsite_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Mobile__c</fullName>
    <label>Onsite Contact Mobile</label>
    <type>Phone</type>
</CustomField>