force-app/main/default/objects/Activation_line__c/fields/Onsite_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Name__c</fullName>
    <label>Onsite Contact Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>