force-app/main/default/objects/Activation_line__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The order product that this line should activate.</description>
    <inlineHelpText>The order product that this line should activate.</inlineHelpText>
    <label>Order Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Case__c</field>
            <operation>equals</operation>
            <valueField>OrderItem.Order.Case__c</valueField>
        </filterItems>
        <infoMessage>Select a product from the order</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Activation lines</relationshipLabel>
    <relationshipName>Activations_lines</relationshipName>
    <type>Lookup</type>
</CustomField>