force-app/main/default/objects/Activation_line__c/fields/Order_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Requested_Date__c</fullName>
    <formula>Activation__r.Order_requested_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order requested date (from sales)</label>
    <type>Date</type>
</CustomField>