force-app/main/default/objects/Activation_line__c/fields/Owner_is_logged_in_user__c.field-meta.xml
<CustomField>
    <fullName>Owner_is_logged_in_user__c</fullName>
    <formula>Activation__r.Owner_is_logged_in_user__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner is logged in user</label>
    <type>Checkbox</type>
</CustomField>