force-app/main/default/objects/Activation_line__c/fields/Parent_Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Activation_Status__c</fullName>
    <formula>TEXT( Activation__r.Activation_progress__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Activation Status</label>
    <type>Text</type>
</CustomField>