force-app/main/default/objects/Activation_line__c/fields/PDF__c.field-meta.xml
<CustomField>
    <fullName>PDF__c</fullName>
    <inlineHelpText>Email to receive invoice</inlineHelpText>
    <label>PDF</label>
    <type>Email</type>
</CustomField>