force-app/main/default/objects/Activation_line__c/fields/Peering_address__c.field-meta.xml
<CustomField>
    <fullName>Peering_address__c</fullName>
    <label>Peering address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>