force-app/main/default/objects/Activation_line__c/fields/Phone_no__c.field-meta.xml
<CustomField>
    <fullName>Phone_no__c</fullName>
    <description>Landline number that can have max 8 digits</description>
    <inlineHelpText>Landline number that can have max 8 digits</inlineHelpText>
    <label>Fixed no.</label>
    <length>8</length>
    <type>Text</type>
</CustomField>