force-app/main/default/objects/Activation_line__c/fields/Phone_no_Status__c.field-meta.xml
<CustomField>
    <fullName>Phone_no_Status__c</fullName>
    <inlineHelpText>Chose what needs to be done with number</inlineHelpText>
    <label>Phone no Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phone_no_Status</valueSetName>
    </valueSet>
</CustomField>