force-app/main/default/objects/Activation_line__c/fields/Phone_Number_Reservation_Error__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Reservation_Error__c</fullName>
    <description>Will contain the error from the platform event number reservation execution</description>
    <label>Phone Number Reservation Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>