force-app/main/default/objects/Activation_line__c/fields/Physical_LAN_interface__c.field-meta.xml
<CustomField>
    <fullName>Physical_LAN_interface__c</fullName>
    <defaultValue>&apos;RJ45&apos;</defaultValue>
    <description>To accommodate order form to tech</description>
    <inlineHelpText>It defines both the subnet used by the customer and the IP address used as customer&apos;s default gateway</inlineHelpText>
    <label>Physical LAN interface</label>
    <type>TextArea</type>
</CustomField>