force-app/main/default/objects/Activation_line__c/fields/Planned_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Planned_delivery_date__c</fullName>
    <formula>Activation__r.Planned_delivery_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Planned Delivery Date as entered on the Activation</inlineHelpText>
    <label>Activation Planned delivery date</label>
    <type>Date</type>
</CustomField>