force-app/main/default/objects/Activation_line__c/fields/Plug_Technician_Required__c.field-meta.xml
<CustomField>
    <fullName>Plug_Technician_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be updated based on the response from POQ. POQ value will be transferred here</description>
    <label>Plug Technician Required</label>
    <type>Checkbox</type>
</CustomField>