force-app/main/default/objects/Activation_line__c/fields/PoA__c.field-meta.xml
<CustomField>
    <fullName>PoA__c</fullName>
    <inlineHelpText>Enter the link to the specific PoA for this number (fuldmagt for nummerportering) which is placed under Files on the Quote. Copy the direct link to the pdf (browser path) in here</inlineHelpText>
    <label>PoA</label>
    <length>250</length>
    <type>Text</type>
</CustomField>