force-app/main/default/objects/Activation_line__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <inlineHelpText>Enter the 4 digit postal code</inlineHelpText>
    <label>Postal Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>