force-app/main/default/objects/Activation_line__c/fields/Power_of_Attorney_Name__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_Name__c</fullName>
    <description>Used to display the Name of POA during Voice onboarding in standard Data Table component. We have run out of available relations to use Formula Fields on new relationships for the Activation Line Object.</description>
    <label>Power of Attorney Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>