force-app/main/default/objects/Activation_line__c/fields/Power_of_Attorney_record__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Power of Attorney record</label>
    <referenceTo>Porting__c</referenceTo>
    <relationshipLabel>Activation lines</relationshipLabel>
    <relationshipName>Activation_lines</relationshipName>
    <type>Lookup</type>
</CustomField>