force-app/main/default/objects/Activation_line__c/fields/Priceplan_Code__c.field-meta.xml
<CustomField>
    <fullName>Priceplan_Code__c</fullName>
    <formula>Manual_Product__r.ProductAPI_Telia_Product_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priceplan Code</label>
    <type>Text</type>
</CustomField>